refactor(backend): 优化数据库架构并重构测试代码
- 调整读写分离策略，统一使用主数据源避免同步延迟
- 优化调度服务业务逻辑，修复任务管理相关问题
- 重构测试代码结构，删除冗余测试文件
- 更新数据库配置，添加条件启用支持