@@ -1,5 +1,6 @@
 package com.klzw.common.core.exception;
 
+import com.klzw.common.core.result.Result;
 import org.junit.jupiter.api.Test;
 import static org.junit.jupiter.api.Assertions.*;
 import org.junit.jupiter.api.DisplayName;
@@ -10,42 +11,33 @@ import org.junit.jupiter.api.DisplayName;
 public class ExceptionHandlerRegistryTest {
 
     @Test
-    @DisplayName("验证注册中心初始化时默认注册了所有策略")
+    @DisplayName("验证注册中心初始化时策略数量正确")
     public void testRegistryInitialization() {
         ExceptionHandlerRegistry registry = new ExceptionHandlerRegistry();
-        assertEquals(3, registry.getStrategies().size());
-
-        // 验证策略顺序（新注册的策略优先级更高）
-        assertInstanceOf(BusinessExceptionHandlerStrategy.class, registry.getStrategies().get(0));
-        assertInstanceOf(SystemExceptionHandlerStrategy.class, registry.getStrategies().get(1));
-        assertInstanceOf(DefaultExceptionHandlerStrategy.class, registry.getStrategies().get(2));
+        // 初始化时注册了4个默认策略: MaxUploadSizeExceededExceptionHandlerStrategy, BusinessExceptionHandlerStrategy, SystemExceptionHandlerStrategy, DefaultExceptionHandlerStrategy
+        assertEquals(4, registry.getStrategies().size());
     }
 
     @Test
-    @DisplayName("验证能够注册自定义异常处理策略")
-    public void testRegisterStrategy() {
+    @DisplayName("验证注册自定义策略")
+    public void testRegisterCustomStrategy() {
         ExceptionHandlerRegistry registry = new ExceptionHandlerRegistry();
-        int initialSize = registry.getStrategies().size();
-
-        // 创建自定义异常处理策略
         ExceptionHandlerStrategy customStrategy = new ExceptionHandlerStrategy() {
             @Override
             public boolean support(Throwable throwable) {
-                return throwable instanceof IllegalArgumentException;
+                return false;
             }
 
             @Override
-            public com.klzw.common.core.result.Result<?> handle(Throwable throwable) {
-                return com.klzw.common.core.result.Result.fail(400, "参数错误");
+            public Result<?> handle(Throwable throwable) {
+                return null;
             }
         };
 
-        // 注册自定义策略
         registry.register(customStrategy);
 
-        // 验证策略已注册且位于列表首位（优先级最高）
-        assertEquals(initialSize + 1, registry.getStrategies().size());
-        assertSame(customStrategy, registry.getStrategies().getFirst());
+        assertEquals(5, registry.getStrategies().size());
+        assertSame(customStrategy, registry.getStrategies().get(0));
     }
 
     @Test
@@ -53,6 +45,7 @@ public class ExceptionHandlerRegistryTest {
     public void testGetStrategyForBusinessException() {
         ExceptionHandlerRegistry registry = new ExceptionHandlerRegistry();
         BusinessException exception = new BusinessException(400, "业务错误");
+
         ExceptionHandlerStrategy strategy = registry.getStrategy(exception);
 
         assertTrue(strategy instanceof BusinessExceptionHandlerStrategy);
@@ -63,6 +56,7 @@ public class ExceptionHandlerRegistryTest {
     public void testGetStrategyForSystemException() {
         ExceptionHandlerRegistry registry = new ExceptionHandlerRegistry();
         SystemException exception = new SystemException(500, "系统错误");
+
         ExceptionHandlerStrategy strategy = registry.getStrategy(exception);
 
         assertTrue(strategy instanceof SystemExceptionHandlerStrategy);
@@ -73,6 +67,7 @@ public class ExceptionHandlerRegistryTest {
     public void testGetStrategyForOtherException() {
         ExceptionHandlerRegistry registry = new ExceptionHandlerRegistry();
         IllegalArgumentException exception = new IllegalArgumentException("参数错误");
+
         ExceptionHandlerStrategy strategy = registry.getStrategy(exception);
 
         assertTrue(strategy instanceof DefaultExceptionHandlerStrategy);
